# erd

./: Cargo.toml  README.md
src/: auth.rs  config.rs  gitlab.rs  input.rs  log.rs  logins.rs  main.rs  output.rs
src/commands/: auth.rs  fetch.rs  history.rs  init.rs  mod.rs
src/config/: artifacts.rs  mod.rs
src/state/: mod.rs
