[package]
name = "erd"
version = "0.1.0"
edition = "2021"
authors = ["James Hendry <jameshendry05@gmail.com>"]
description = "Easy runtime deployment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.9"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
zip = { version = "1.1.3" }
