[package]
name = "erd"
version = "0.1.0"
edition = "2021"
authors = ["James Hendry <jameshendry05@gmail.com>"]
description = "Easy runtime deployment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.9"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
zip = { version = "1.1.3" }
sha2 = "0.10.8"
termcolor = "1.4.1"
dirs = "5.0.1"
